<resources>
    <string name="app_name">DoubanTop</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="sample_name" translatable="false">dxjia</string>
    <string name="sample_email" translatable="false">jdxwind@163.com</string>
    <string name="navigation_drawer_open" translatable="false"/>
    <string name="navigation_drawer_close" translatable="false"/>
    <string name="action_done">Done</string>
    <string name="action_search">Search</string>
    <string name="not_title_set">No title set</string>
    <string name="content_title">Dou Ban Top</string>
    <string name="book_pager_title">Book</string>
    <string name="movie_pager_title">Movie</string>
    <string name="note_pager_title">Note</string>
    <string name="else_pager_title">Else</string>
    <string name="music_pager_title">Music</string>
    <string name="city_pager_title">City-Wide</string>
    <string name="movie_top200_pager_title">Top200</string>
    <string name="movie_top_pager_title">Top</string>
    <string name="movie_us_box_pager_title">US Box</string>
    <string name="search_pager_title">Search</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="detail_item_title_score">Score</string>
    <string name="detail_item_title_director">Director</string>
    <string name="detail_item_title_casts">Casts</string>
    <string name="detail_item_title_summary">Summary</string>
    <string name="people_item_constellation">Constellation:</string>
    <string name="people_item_gender">Gender:</string>
    <string name="people_item_birthday">Birthday:</string>
    <string name="people_item_born_place">Bornplace:</string>
    <string name="people_item_professions">Professions:</string>
    <string name="people_item_name_en">Name-en:</string>
    <string name="people_item_aka_cn">aka-cn:</string>

    <string name="imate_back">Back</string>
    <string name="edit_text_search_hint">Title,Actors or Director</string>
    <string name="voice_cancel" translatable="false">Voice Cancel</string>
    <string name="do_search" translatable="false">Do Search</string>
    <string name="string_filler" translatable="false">Filler</string>
    <string name="database_name" translatable="false">doubantop</string>

    <string name="empty_note_text">Empty</string>
    <string name="unkown">Unkown</string>
    <string name="loading">Loading</string>

    <string name="action_star">Star</string>
    <string name="favorites">Favorites</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_favorites_acvitity">Favorites</string>
</resources>
