<?xml version="1.0" encoding="utf-8"?>
<!-- 显示在toolbar位置的search view -->
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_body"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="invisible"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout_search"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_search_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/imate_back"
                android:padding="12dp"
                android:src="@mipmap/ic_arrow_back" />

            <EditText
                android:id="@+id/search_text_input_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:gravity="center_vertical"
                android:hint="@string/edit_text_search_hint"
                android:imeOptions="actionSearch"
                android:inputType="textCapWords"
                android:paddingLeft="12dp"
                android:paddingRight="8dp"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/clearSearch"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/voice_cancel"
                android:padding="12dp"
                android:src="@mipmap/ic_keyboard_voice" />

            <ImageView
                android:id="@+id/do_search"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/do_search"
                android:padding="12dp"
                android:src="@mipmap/ic_search_header" />

        </LinearLayout>

        <View
            android:id="@+id/line_divider"
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_below="@+id/linearLayout_search"
            android:background="#eee" />

        <!-- 搜索历史 -->
        <ListView
            android:id="@+id/search_history_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_divider"
            android:divider="@android:color/white" />
    </RelativeLayout>
</android.support.v7.widget.CardView><!-- Search view end -->
