<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_tabbar"
                style="@style/Douban.Content.ActionBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways" />

            <android.support.design.widget.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar_tabbar"
                android:background="?attr/colorPrimary"
                android:scrollbars="horizontal"
                android:theme="@style/AppTheme.Tabs" />
        </android.support.design.widget.AppBarLayout>

    </android.support.design.widget.CoordinatorLayout>

    <!-- search views -->
    <!-- 半透明的背景蒙板 -->
    <RelativeLayout
        android:id="@+id/view_search_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50000000"
        android:clickable="true"
        android:visibility="gone">
    </RelativeLayout>

    <!-- 显示在toolbar位置的search view -->
    <android.support.v7.widget.CardView
        android:id="@+id/search_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout_search"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_search_back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/imate_back"
                    android:padding="12dp"
                    android:src="@mipmap/ic_arrow_back"/>

                <EditText
                    android:id="@+id/search_text_input_edit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:gravity="center_vertical"
                    android:hint="@string/edit_text_search_hint"
                    android:imeOptions="actionSearch"
                    android:inputType="textCapWords"
                    android:paddingLeft="12dp"
                    android:paddingRight="8dp"
                    android:singleLine="true"/>

                <ImageView
                    android:id="@+id/clearSearch"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/voice_cancel"
                    android:padding="12dp"
                    android:src="@mipmap/ic_keyboard_voice"/>

                <ImageView
                    android:id="@+id/do_search"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/do_search"
                    android:padding="12dp"
                    android:src="@mipmap/ic_search_header"/>

            </LinearLayout>

            <View
                android:id="@+id/line_divider"
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_below="@+id/linearLayout_search"
                android:background="#eee"/>

            <!-- 搜索历史 -->
            <ListView
                android:id="@+id/search_history_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_divider"
                android:divider="@android:color/white"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>